# board-app

./: .gitignore  ROADMAP.md  pyproject.toml  render.yaml  requirements.txt  ~$화면예시_메뉴배치.pptx  화면예시_메뉴배치.pptx
app/: admin_routes.py  auth.py  auth_routes.py  board_routes.py  bom_routes.py  database.py  home_routes.py  main.py  member_routes.py  menu_cache.py  menu_routes.py  models.py  notice_routes.py  part_routes.py  recruit_routes.py  routes.py  screen_routes.py
app/static/: style.css
app/templates/: base.html  home.html  index.html  layout_admin.html  layout_board.html  layout_bom.html  layout_frame.html  layout_member.html  login.html  post_detail.html  post_form.html
app/templates/admin/: menu_list.html  menu_section_form.html  operator_form.html  operator_list.html  screen_audit.html  screen_form.html  screen_list.html
app/templates/board/: list.html
app/templates/bom/: bom_detail.html  bom_edit.html  bom_list.html  part_form.html  part_list.html
app/templates/members/: banner_editor.html  detail.html  form.html  list.html
app/templates/notices/: detail.html  form.html  list.html
app/templates/recruit/: banner_view.html
