[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "finance-datareader>=0.9.110",
    "google-genai>=1.67.0",
    "jinja2",
    "openai>=2.28.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-multipart",
    "psycopg2-binary",
    "sqlalchemy",
    "uvicorn[standard]",
]
